erDiagram
    PRICING_MODEL ||--o{ MODEL_RUN : builds
    MODEL_RUN ||--o| PRICING_RATE_PACKAGE : publishes
    PRICING_RATE_PACKAGE ||--o{ PRICING_TERM : contains
    PRICING_TERM ||--o{ PRICING_TERM_FEATURE : uses
    PRICING_FEATURE ||--o{ PRICING_TERM_FEATURE : identifies
    PRICING_TERM ||--o{ PRICING_RATE_CELL : contains
    PRICING_TERM ||--o{ PRICING_SPLINE_SEGMENT : contains
    PRICING_RATE_CELL ||--o{ PRICING_RATE_CELL_LEVEL : keyed_by
    PRICING_FEATURE_LEVEL ||--o{ PRICING_RATE_CELL_LEVEL : selects
    PRICING_FEATURE ||--o{ PRICING_FEATURE_LEVEL_SET : versions
    PRICING_FEATURE_LEVEL_SET ||--o{ PRICING_FEATURE_LEVEL : contains
    PRICING_RATE_PACKAGE ||--o{ PRICING_COMPILED_RATE_CELL : compiles
    PRICING_RATE_PACKAGE ||--o{ PRICING_COMPILED_1D_RATE_BAND : compiles
    PRICING_MODEL ||--o{ PRICING_MODEL_DEPLOYMENT : slots
    PRICING_RATE_PACKAGE ||--o{ PRICING_MODEL_DEPLOYMENT : deployed
